src/objects/Preferred_Resource__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Preferred_Resource</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>System_Details__c</fullName>
        <label>System Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>full_name__c</fullName>
        <label>full name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Preferred Resource</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PR{00000}</displayFormat>
        <label>Preferred Resource Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Preferred Resource</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>